# zero2prod

./: .dockerignore  .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile-sqlx  Makefile  README.md  configuration.yaml  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
examples/: chinese_word.rs
migrations/: 20210329020602_make_status_not_null_in_subscriptions.sql  20210329021106_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
