[package]
name = "zero2prod"
version = "0.1.0"
authors = ["xiaomeng79 <496096100@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"


[dependencies]
actix-web = "3.3"
actix-rt="1.1.1"
serde = { version="1",features = ["derive"]}
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
reqwest="0.10"
tokio = { version = "0.3", features = ["full"] }
