[package]
name = "zero2prod"
version = "0.1.0"
authors = ["xiaomeng79 <496096100@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "3.3"
actix-rt="1.1.1"
serde = { version="1",features = ["derive"]}
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate","offline"] }
config = "0.10"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.8.2"
log = "0.4.11"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.1"
serde-aux = "1.1.0"
unicode-segmentation = "1.7.1"
validator = { version = "0.12.0", features = ["derive"] }

[dev-dependencies]
claim = "0.4.0"
lazy_static = "1.4.0"
reqwest="0.10"
tokio = { version = "0.3", features = ["full"] }

# We are not using fake >= 2.4 because it relies on rand 0.8
# which has been recently released and it is not yet used by
# quickcheck (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
